--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,18 +6,18 @@ environment:
   global:
     BITS: 32
   matrix:
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    CONFIGURATION: Release
-    COMPILER: MSVC
-    PLATFORM: x64
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    CONFIGURATION: Release
-    COMPILER: MinGW
-    PLATFORM: i686
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    CONFIGURATION: Release
-    COMPILER: MinGW
-    PLATFORM: x86_64
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      CONFIGURATION: Release
+      COMPILER: MSVC
+      PLATFORM: x64
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      CONFIGURATION: Release
+      COMPILER: MinGW
+      PLATFORM: i686
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      CONFIGURATION: Release
+      COMPILER: MinGW
+      PLATFORM: x86_64
 
 build:
   verbosity: detailed
@@ -36,6 +36,6 @@ build_script:
         & 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin\MSBuild' -version;
       }
       MinGW {
-        bash -lc "export PATH=/mingw64/bin:`$PATH; cd /c/projects/AppVeyor; gcc -o test test.c";
+        bash -lc "export PATH=/mingw$env:BITS/bin:`$PATH; cd /c/projects/AppVeyor; ls /mingw$env:BITS/bin; gcc -o test test.c";
       }
     }
